--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
+.build/
+project.xcworkspace
+xcuserdata
+Examples/
 .DS_Store
-/.build
-/Packages
-xcuserdata/
-DerivedData/
-.swiftpm/configuration/registries.json
-.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
-.netrc
+Gemfile
+Gemfile.lock
+*.sketch
+.swiftpm
